--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,12 @@ description = "A simple UPnP client written in Rust"
 [dependencies]
 anyhow = "1.0.68"
 async-stream = "0.3.3"
+colored_json = "3.0.1"
 elementtree = "1.2.3"
 futures-util = "0.3.25"
 http = "0.2.8"
+serde = "1.0.152"
+serde_json = "1.0.91"
 socket2 = "0.4.7"
 surf = { version = "2.3.2", features = ["h1-client-rustls"], default-features = false}
 tokio = { version = "1.24.2", features = ["tokio-macros", "macros", "rt", "rt-multi-thread"] }
