--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,16 @@ authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
 categories = ["command-line-utilities", "network-programming"]
 keywords = ["upnp", "client", "tokio", "dlna"]
 description = "A simple UPnP client written in Rust"
+
+[[example]]
+name = "discover"
+path = "examples/discover.rs"
+
+[[example]]
+name = "media-renderer-client"
+path = "examples/media_renderer_client.rs"
+
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -23,3 +33,6 @@ serde_json = "1.0.91"
 socket2 = "0.4.7"
 surf = { version = "2.3.2", features = ["h1-client-rustls"], default-features = false}
 tokio = { version = "1.24.2", features = ["tokio-macros", "macros", "rt", "rt-multi-thread"] }
+url = "2.3.1"
+xml-builder = "0.5.1"
+xml-rs = "0.8.4"
