--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,9 @@ colored_json = "3.0.1"
 elementtree = "1.2.3"
 futures-util = "0.3.25"
 http = "0.2.8"
+hyper = { version = "0.14.23", features = ["server", "runtime", "client", "stream", "tcp", "http1", "http2"] }
+lazy_static = "1.4.0"
+owo-colors = "3.5.0"
 serde = "1.0.152"
 serde_json = "1.0.91"
 socket2 = "0.4.7"
